# osprey

./: .coderabbit.yaml  .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  book.toml  claude-log.md  cleanup-clickhouse-tests.sh  conftest.py  demo.sh  diag.sh  docker-compose.async-worker.yaml  docker-compose.atproto.yaml  docker-compose.clickhouse.yaml  docker-compose.diag.yaml  docker-compose.test.clickhouse.yaml  docker-compose.test.druid.yaml  docker-compose.test.yaml  docker-compose.yaml  entrypoint.sh  gen-protos.sh  index.html  init-bigtable.sh  init-minio-bucket.sh  pyproject.toml  run-atproto.sh  run-clickhouse-tests.sh  run-tests.sh  spy.sh  start.sh
.devcontainer/: README.md  (+3 more)
divine/plugins/: pyproject.toml
divine/plugins/src/: divine_register_plugins.py
divine/plugins/src/services/: relay_manager_sink.py  zendesk_sink.py
divine/plugins/src/udfs/: check_moderation_result.py
example_atproto_plugins/: README.md  pyproject.toml
example_atproto_plugins/src/atproto_plugin/: enrichment_udfs.py  jetstream_input_stream.py  ozone_label_sink.py  register_plugins.py
example_atproto_plugins/tests/: test_enrichment_udfs.py  test_jetstream_input_stream.py
example_plugins/: README.md  pyproject.toml
example_plugins/src/: register_async_plugins.py  register_plugins.py
example_plugins/src/async_sinks/: example_async_output_sink.py
example_plugins/src/llm/: __init__.py  anthropic_provider.py
example_plugins/src/llm/tests/: test_anthropic_provider.py
example_plugins/src/output_sinks/: clickhouse_execution_results_sink.py
example_plugins/src/plugin_sinks/: kafka_input_stream.py
example_plugins/src/plugin_udfs/: text_contains.py
example_plugins/src/services/: labels_service.py
example_plugins/src/udfs/: ban_user.py
osprey_async_worker/: Dockerfile  pyproject.toml
osprey_async_worker/example_rules/: main.sml  sample_actions.jsonl
osprey_async_worker/example_rules/config/: example_config.yaml
osprey_async_worker/example_rules/rules/: long_message.sml
osprey_async_worker/src/osprey/async_worker/: engine.py  executor.py  metric_tags.py  singletons.py
osprey_async_worker/src/osprey/async_worker/adaptor/: constants.py  hookspecs.py  interfaces.py  plugin_manager.py
osprey_async_worker/src/osprey/async_worker/cli/: main.py
osprey_async_worker/src/osprey/async_worker/lib/: coordinator_input_stream.py  external_service.py  publisher.py
osprey_async_worker/test_data/: input.jsonl
osprey_async_worker/test_data/rules/: main.sml
osprey_async_worker/test_data/rules/rules/: test_rule.sml
osprey_coordinator/: .gitignore  Cargo.toml  Dockerfile  build.rs  dev_env.sh
osprey_coordinator/etcd_config_derive/: Cargo.toml
osprey_coordinator/etcd_config_derive/src/: disconfigs.rs  flags.rs  lib.rs
osprey_coordinator/metrics_derive/: Cargo.toml
osprey_coordinator/metrics_derive/src/: lib.rs
osprey_coordinator/src/: coordinator_metrics.rs  kafka.rs  label_service_client.rs  main.rs  osprey_bidirectional_stream.rs  priority_queue.rs  pubsub.rs  shutdown_handler.rs  smite_bidirectional_stream.rs  snowflake_client.rs  sync_action_rpc.rs
osprey_coordinator/src/backoff_utils/: async_backoff.rs  config.rs  mod.rs
osprey_coordinator/src/cached_futures/: mod.rs
osprey_coordinator/src/consumer/: kafka.rs  message_consumer.rs  message_decoder.rs  mod.rs  pubsub.rs
osprey_coordinator/src/discovery/: announcer.rs  directory.rs  error.rs  lib.rs  limits.rs  mod.rs  ring.rs  service.rs  watcher.rs
osprey_coordinator/src/discovery/types/: mod.rs  ring.rs
osprey_coordinator/src/etcd/: client.rs  error.rs  mod.rs  server.rs  watcher.rs
osprey_coordinator/src/etcd_config/: mod.rs
osprey_coordinator/src/etcd_watcherd/: api.rs  metrics.rs  mod.rs  stats.rs  watcher.rs
osprey_coordinator/src/etcd_watcherd/rpc/: client.rs  mod.rs  server.rs
osprey_coordinator/src/etcd_watcherd/watcher_impl/: key_watcher.rs  mod.rs  recursive_key_watcher.rs  util.rs
osprey_coordinator/src/future_utils/: mod.rs  oneshot.rs  time.rs
osprey_coordinator/src/gcloud/: gcp_metadata.rs  kms.rs  mod.rs  pubsub.rs  root_ca_certificate.rs
osprey_coordinator/src/gcloud/auth/: auth_interceptor.rs  mod.rs  token.rs  token_refresher.rs
osprey_coordinator/src/gcloud/grpc/: connection.rs
osprey_coordinator/src/hashring/: mod.rs
osprey_coordinator/src/metrics/: mod.rs
osprey_coordinator/src/metrics/base_metric/: mod.rs
osprey_coordinator/src/metrics/counters/: dynamic_counter.rs  mod.rs  static_counter.rs
osprey_coordinator/src/metrics/emit_worker/: mod.rs
osprey_coordinator/src/metrics/gauges/: dynamic_gauge.rs  gauge_struct.rs  mod.rs  static_gauge.rs
osprey_coordinator/src/metrics/histograms/: dynamic_histogram.rs  mod.rs  pool_histograms.rs  static_histogram.rs
osprey_coordinator/src/metrics/macros/: dynamic_metric.rs  mod.rs  static_metric.rs
osprey_coordinator/src/metrics/recycling_socket_metrics_sink/: mod.rs
osprey_coordinator/src/metrics/string_interner/: mod.rs
osprey_coordinator/src/metrics/v2/: counter.rs  gauge.rs  mod.rs  send.rs  statsd_output.rs
osprey_coordinator/src/pigeon/: grpc_client.rs  grpc_timeout.rs  health.rs  instrumented_connection.rs  middleware.rs  mod.rs  option_pin.rs  pigeon_metrics.rs  recover_error.rs  router.rs  status.rs  utils.rs
osprey_coordinator/src/proto/: mod.rs
osprey_coordinator/src/pub_sub_streaming_pull/: ack_id.rs  flow_control.rs  message.rs  message_ack_queue.rs  message_handler.rs  messages_in_flight.rs  messages_on_hold.rs  metrics.rs  mod.rs  streaming_pull_manager.rs  streaming_pull_manager_handle.rs
osprey_coordinator/src/signals/: mod.rs
osprey_coordinator/src/tokio_utils/: mod.rs  unbounded_receiver_chunker.rs
osprey_coordinator/src/tonic_mock/: mod.rs
osprey_coordinator/test_data/: pubsub_proto_message.json
osprey_worker/: Dockerfile  conftest.py  pyproject.toml
osprey_worker/src/osprey/: conftest.py
osprey_worker/src/osprey/engine/: __init__.py  conftest.py  shared_constants.py
osprey_worker/src/osprey/worker/: conftest.py
(+1370 files in other folders)
