[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osprey-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect>=0.10.0",
    "flask-cors>=6.0.1",
    "osprey_rpc",
    "python-snappy>=0.7.3",
]
[project.scripts]
osprey-cli = "osprey.worker.lib.cli:cli"

[project.entry-points."osprey_plugin"]
stdlib = "osprey.worker._stdlibplugin"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]
