[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osprey-worker"
version = "0.1.0"
description = "Osprey rules engine worker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "osprey_rpc",
    # cli + web
    "click>=7.1",
    "flask>=1.1",
    "flask-cors>=6.0",
    "werkzeug>=1.0",
    # engine core
    "gevent>=24.2",
    "greenlet>=3.0",
    "pydantic>=1.10,<2",
    "typing-extensions>=4.6",
    "typing-inspect>=0.9",
    "result>=0.5",
    "deepmerge>=0.3",
    "pyyaml>=6.0",
    "jsonpath-rw>=1.4",
    "pluggy>=1.5",
    "ply>=3.11",
    # engine UDFs
    "python-dateutil>=2.8",
    "dnspython>=2.0",
    "tld>=0.12",
    "unidecode>=1.3",
    "python-Levenshtein>=0.12",
    "mmh3>=3.0",
    "phone-iso3166>=0.3",
    "graphviz>=0.20",
    # tracing + metrics
    "ddtrace>=2.17",
    "datadog>=0.51",
    # networking
    "grpcio>=1.49",
    "requests>=2.28",
    "protobuf>=4.25",
    # observability
    "sentry-sdk>=1.5",
]

[project.scripts]
osprey-cli = "osprey.worker.lib.cli:cli"

[project.entry-points."osprey_plugin"]
stdlib = "osprey.worker._stdlibplugin"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]
