[package]
name = "osprey_coordinator_etcd_config_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
convert_case = "0.6"
darling = "0.20"
proc-macro2 = "1.0.26"
quote = "1.0"
syn = { version = "2", features = ["full"] }
